--- a/src/main/resources/static/pelicula.html
+++ b/src/main/resources/static/pelicula.html
@@ -60,7 +60,7 @@
                 <label for="duracion">Duración</label>
                 <input type="number" id="duracion" required><br><br>
 
-                <label for="sinopsis">Sinopsis:</label><br>
+                <label for="sinopsis">Sinopsis</label><br>
                 <textarea id="sinopsis" required></textarea><br><br>
 
                 <button type="submit">Aceptar</button>
