Intento de mejora frontend. Parece que hay un problema en la búsqueda de películas que no tienen ningún participante asociado

--- a/src/main/resources/static/pelicula.html
+++ b/src/main/resources/static/pelicula.html
@@ -15,7 +15,7 @@
         <input type="text" id="participanteFiltro" placeholder="Participante">
         <select id="paisFiltro"></select>
         <select id="generoFiltro"></select>
-        <button id="BotonBuscarPeliculas" onclick="buscarPeliculas()">Buscar</button>
+        <button id="botonBuscarPeliculas" onclick="buscarPeliculas()">Buscar</button>
         <button id="botonCrearPelicula" onclick="abrirCrearPelicula()">Insertar Película</button>
     </div>
 
