--- a/src/main/resources/static/pelicula.html
+++ b/src/main/resources/static/pelicula.html
@@ -7,6 +7,13 @@
     <!-- <link rel="stylesheet" href="tablas.css"> -->
 </head>
 <body onLoad="cargaInicial()">
+	
+	<div class="paginas">
+	    <button onclick="location.href='participante.html'">Participantes</button>
+	    <button onclick="location.href='pais.html'">Países</button>
+	    <button onclick="location.href='genero.html'">Géneros</button>
+	</div>
+
 
     <h1>Películas</h1>
 
