Me he dado cuenta de que aún siguen surgiendo ciertos problemas a la hora de cargar detalles, además de la posibilidad de crear un apartado de detalles de participantes y una opción de eliminar participantes dentro de detalles.

--- a/src/main/resources/static/vista.html
+++ b/src/main/resources/static/vista.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Vistas</h1>
+	
+	<button onclick="abrirCrearVista()">Crear Vista</button>
 
     <table id="tablaVistas">
         <thead>
