--- a/src/main/resources/static/detallePelicula.html
+++ b/src/main/resources/static/detallePelicula.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Detalle de Película</title>
+	<link rel="stylesheet" href="detalles.css">
 </head>
 
 <body onload="cargarDetallePelicula()">
