--- a/src/main/resources/static/vista.html
+++ b/src/main/resources/static/vista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Películas</title>
-    <!-- <link rel="stylesheet" href="tablas.css"> -->
+    <link rel="stylesheet" href="tablas.css">
 </head>
 <body>
 
