--- a/src/main/resources/static/vista.html
+++ b/src/main/resources/static/vista.html
@@ -9,8 +9,9 @@
 <body>
 
     <h1>Vistas</h1>
-	
-	<button onclick="abrirCrearVista()">Crear Vista</button>
+	<div class="filtros">
+		<button onclick="abrirCrearVista()">Crear Vista</button>
+	</div>
 
     <table id="tablaVistas">
         <thead>
