--- a/src/main/resources/static/detalleParticipante.html
+++ b/src/main/resources/static/detalleParticipante.html
@@ -2,13 +2,18 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">lo
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Detalle de Participante</title>
 	<link rel="stylesheet" href="detalles.css">
 </head>
 
 <body onload="cargarDetalleParticipante()">
+	
+	<div class="paginas">
+	    <button onclick="location.href='pelicula.html'">Películas</button>
+	</div>
+	
 	<h1>Detalle de Participante</h1>
 	
 	<div id="detallePelicula">
